<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.kerkouche.projetfinale.DetailFragment">

        <TextView
            android:id="@+id/titre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"

            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/titre"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_pager" />

        <ImageButton
            android:id="@+id/localisationBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="86dp"
            android:layout_height="52dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:textSize="10dp"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/prendreRDV"
            app:srcCompat="@drawable/ic_action_map"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageButton
            android:id="@+id/placeBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:textSize="10dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_google_place"
            app:layout_constraintTop_toTopOf="@+id/localisationBtn"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/voirDisponibilite" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/desciption"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            app:layout_constraintLeft_toLeftOf="@+id/titre"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titre" />

        <TextView
            android:id="@+id/typeLog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/typelog"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            app:layout_constraintLeft_toLeftOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/prix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/prix"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            app:layout_constraintLeft_toLeftOf="@+id/typeLog"
            app:layout_constraintTop_toBottomOf="@+id/typeLog" />

        <TextView
            android:id="@+id/region"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/region"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            app:layout_constraintLeft_toLeftOf="@+id/prix"
            app:layout_constraintTop_toBottomOf="@+id/prix" />

        <TextView
            android:id="@+id/nbrDeChambres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nbrdechambres"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            app:layout_constraintLeft_toLeftOf="@+id/region"
            app:layout_constraintTop_toBottomOf="@+id/region" />

        <TextView
            android:id="@+id/surface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/surface"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
            app:layout_constraintLeft_toLeftOf="@+id/nbrDeChambres"
            app:layout_constraintTop_toBottomOf="@+id/nbrDeChambres" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            style="@style/Widget.MaterialRatingBar.RatingBar"
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/commentaireEdit"
            app:layout_constraintLeft_toLeftOf="@+id/commentaireEdit" />

        <Button
            android:id="@+id/commenterBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="131dp"
            android:layout_height="71dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/laisser_un_avis"
            app:layout_constraintHorizontal_bias="0.636"
            app:layout_constraintLeft_toRightOf="@+id/commentaireEdit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/commentaireEdit" />

        <EditText
            android:id="@+id/commentaireEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/laissez_votre_avis_sur_l_annonce"
            android:inputType="textMultiLine"
            app:layout_constraintLeft_toLeftOf="@+id/surface"
            app:layout_constraintTop_toBottomOf="@+id/voirDisponibilite" />

        <ImageButton
            android:id="@+id/voirDisponibilite"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp"
            android:textSize="10dp"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surface"
            app:srcCompat="@drawable/ic_rdv" />

        <ImageButton
            android:id="@+id/prendreRDV"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:textSize="10dp"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/voirDisponibilite"
            app:srcCompat="@drawable/ic_shit"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ListView
            android:id="@+id/listCommentaire"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            app:layout_constraintVertical_bias="0.0" />


        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="81dp"
            tools:layout_editor_absoluteX="-382dp" />

        <android.support.v4.view.ViewPager

            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="195dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0">

        </android.support.v4.view.ViewPager>

    </android.support.constraint.ConstraintLayout>
</ScrollView>